--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
                 </dependencies>
             </plugin>
 
+            
             <plugin>
                 <groupId>org.jfrog.buildinfo</groupId>
                 <artifactId>artifactory-maven-plugin</artifactId>
@@ -80,7 +81,8 @@
                         </goals>
                         <configuration>
                             <deployProperties>
-                                <build.vcsRevision>{{TRAVIS_COMMIT}}
+                                <build.vcsRevision>
+                                    {{GITHUB_SHA}}
                                 </build.vcsRevision>
                             </deployProperties>
                             <publisher>
@@ -94,19 +96,21 @@
                                 </snapshotRepoKey>
                             </publisher>
                             <buildInfo>
-                                <agentName>Travis CI</agentName>
-                                <buildNumber>{{TRAVIS_BUILD_NUMBER}}
+                                <agentName>Github Actions</agentName>
+                                <buildNumber>{{GITHUB_RUN_ID}}
                                 </buildNumber>
                                 <buildUrl>
-                                    http://travis-ci.org/{{TRAVIS_REPO_SLUG}}/builds/{{TRAVIS_BUILD_ID}}
+                                    http://travis-ci.org/{{GITHUB_REPOSITORY}}/builds/{{GITHUB_RUN_ID}}
                                 </buildUrl>
                                 <principal>{{USER}}</principal>
-                                <vcsRevision>{{TRAVIS_COMMIT}}</vcsRevision>
+                                <vcsRevision>{{GITHUB_SHA}}</vcsRevision>
                             </buildInfo>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
+
+            
         </plugins>
     </build>
 
